# spaceheroes_ctf_24-main

./: README.md
RE/ATM/: README.md
RE/ATM/docker/: Dockerfile  atm.c
RE/ATM/solve/: solve.py
RE/ATM/src/: atm.c  flag.txt
RE/Lethal_Virtualization/: Makefile  README.md
RE/Lethal_Virtualization/docker/: Dockerfile
RE/Lethal_Virtualization/solve/: bytes.txt  flag.txt  solve.py  testRun.txt
RE/PatientRobot/: README.md
RE/environmental_hazard/: README.md  notes.md
RE/ziggy_stardust/: readme.md
crypto/comms_array/: README.md
crypto/to_serve_man/: README.md  notes.md
crypto/warmind_communique/: Makefile  README.md
forensics/a window into sapce/: README.MD
pwn/Crew_Member_Survey/: Makefile  README.md
pwn/a_riscv_maneuver/: README.md
pwn/helldivers/: README.md
web/GTFO Jabba's Palace/: README.md
web/fix_lil_mars_chall_thingy/: Dockerfile  app.py  readme.md  run.sh
web/martiansonly/: README.md  docker2distrib.sh  src
web/martiansonly/distrib/src/: Cargo.toml
web/martiansonly/distrib/src/scripts/: gen_footer.sh  gen_head.sh  get_key.sh
web/martiansonly/distrib/src/www/: index.html
web/martiansonly/distrib/src/www/css/: style.css
web/martiansonly/distrib/src/www/profiles/TJ/: bio.txt
web/martiansonly/distrib/src/www/profiles/colombia/: bio.txt
web/martiansonly/distrib/src/www/profiles/curiosity/: bio.txt
web/martiansonly/distrib/src/www/profiles//: bio.txt  convert.sh
web/martiansonly/distrib/src/www/profiles//: bio.txt
web/martiansonly/distrib/src/www/profiles/󱤑󱦐󱤊󱤦󱤌󱤐󱤁󱥃󱦑/: bio.txt
web/smuggler/: README.md
(+248 files in other folders)
