[package]
name = "martiansonly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["multipart", "http1", "tokio"] }
hyper = { version = "1.2.0", default-features = false }
infer = "0.15.0"
mime_guess = "2.0.4"
once_cell = "1.19.0"
path-absolutize = "3.1.1"
regex = { version = "1.10.4", features = ["use_std"] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "net"] }
